--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uuid": "8024e443-097d-48d8-81a1-a025e52c82d1"
   },
   "engines": {
-    "node": ">=14.19.1 <=16.x.x",
+    "node": "16.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
